--- a/DigitalReceptie/index.html
+++ b/DigitalReceptie/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="widht=device-width,initial-scale=1.0" />
-  <meta description="Corona Check">
-  <title>Zadatak</title>
+  <meta description="CoronaCheck can help you to quickly and efficiently scan the corona admission ticket by reducing the need for manpower to carry out this time-consuming task.">
+  <title>Corona Check</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
